--- a/QuickBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -15,7 +15,7 @@
             <a class="nav-link text-dark" [routerLink]='["/counter"]'>Counter</a>
           </li>
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
-            <a class="nav-link text-dark" [routerLink]='["/fetch-data"]'>Fetch datar</a>
+            <a class="nav-link text-dark" [routerLink]='["/fetch-data"]'>Fetch dados</a>
           </li>
          </ul>
       </div>
